# space

./: .gitignore  .hgignore  .hgtags  Android.mk  CMakeLists.txt  Eclipse-setups.txt  README.md  chiphello.c  makefile  space.c  space.h  zip_res.sh
.externalToolBuilders/: zip_resources.launch
Chipmunk-6.1.2/doc/: index.html
Chipmunk-6.1.2/lib/: chipmunk.lib
Eclipse/: Eclipse-setups.txt  codetemplates.xml
SDL/mac/: libSDL.dylib
SDL_image/win/: win - Shortcut.lnk
SDL_ttf/linux/: libSDL_ttf-2.0.so.0.10.1
bmfont/: Arial.fnt  makefile
game_data/: makefile  object_defaults.json  objects  space  space_1.json
game_data/bmfont/: Arial.fnt  bigariel.fnt  courier.fnt  sans.fnt  sans_plain.fnt
game_data/level/: 01_01.lvl  01_03.lvl  01_04.lvl  01_05.lvl  01_06.lvl  01_07.lvl  02_01.lvl  easymode.json  empty.json  factorycity.json  fromeditor.json  object_defaults.json  test.json
game_data/particles/: explosion_building.xml  explosion_ground.xml  flame.xml  flame_3.xml  flame_stress.xml  fragments.xml  rocket_flame.xml  smoke.xml  sparks.xml
game_data/shapes/: factory.shape  factory_v2.shape  ramp.shape  tank.shape  turret.shape
game_data/textures/: gdxspacetex  metal01.pvr  spacetex.atlas  spacetex.pack
game_data/tilemaps/: level02_01.tmx  level1.tmx  level2.tmx  level3.tmx  level4.tmx  level5.tmx  level6.tmx
gamedata/phys/: ramp
lib/LList/: llist.c  llist.h
lib/SDL/mac/: SDL_opengl.h
lib/SDL2/include/: SDL_opengl.h
lib/SDL2/mac/: libSDL2-2.0.0.dylib  libSDL2.la
lib/SDL2/win/: libSDL2.la
lib/SDL2_mixer/: SDL_mixer.h
lib/inih/: makefile
particles/: explosion_ground.xml  flame.xml  flame_3.xml  flame_stress.xml  fragments.xml  makefile  rocket_flame.xml  score.xml  smoke.xml  sparks.xml
script/: cryptdata.py  iospack.sh  test.py
space_msvc/: recreate_link.bat  space_msvc.sln  space_msvc.vcxproj  space_msvc.vcxproj.filters
space_msvc/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  space_msvc.ilk  space_msvc.lastbuildstate  vc100.idb
space_vc10/: space_vc10.opensdf  space_vc10.sdf  space_vc10.sln
space_vc10/Debug/: space_vc10.ilk
space_vc10/space_vc10/: main.c  space_vc10.vcxproj
src/: .#main.c  bmfont.c  bmfont.h  bullet.c  bullet.h  button.c  button.h  camera.c  camera.h  collisioncallbacks.c  collisioncallbacks.h  constants.h  customparticles.c  customparticles.h  draw.c  draw.h  font.c  font.h  game.c  game.h  gameover.c  gameover.h  highscorelist.c  highscorelist.h  hpbar.c  hpbar.h  imgloader.c  imgloader.h  includes.h  joystick.c  joystick.h  level.c  level.h  leveldone.c  leveldone.h  levelscreen.c  levelscreen.h  levelselect.c  levelselect.h  list.c  (+56 more)
src/engine/: engine.c  engine.h  unitinfo.c  utils.c
src/space/: collisioncallbacks.c  game.c  game.h  grid.c  grid.h  level.c  level.h  level2.c  polyshape.c  polyshape.h  solarsystem.c  solarsystem.h  spaceengine.c  spaceengine.h  tilemap.c  tilemap.h  upgrades.c  upgrades.h
textures/: makefile  sprites.csv  tiles.pdn
tilemaps/: level1.tmx  level2.tmx  level3.tmx  level4.tmx  level5.tmx  level6.tmx  makefile
tools/bytestats/: makefile  stats  stats.c
tools/encrypt/: encrypt  encrypt.c  makefile  we_crypt.c  we_crypt.h
tools/libgdx/: makefile
(+185 files in other folders)
